--- a/facebook-scraper/package.json
+++ b/facebook-scraper/package.json
@@ -5,11 +5,16 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "start": "node -r dotenv/config src/index.js"
+    "start": "ts-node --esm -r dotenv/config src/index.ts"
   },
   "dependencies": {
     "d3-dsv": "^3.0.1",
     "dotenv": "^16.0.3",
     "puppeteer": "^19.5.2"
+  },
+  "devDependencies": {
+    "@types/d3-dsv": "^3.0.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.4"
   }
 }
