feat(dashboard): add topics chart with unovis

--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -35,6 +35,8 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@unovis/svelte": "^1.0.3",
+		"@unovis/ts": "^1.0.3",
 		"d3-fetch": "^3.0.1"
 	}
 }
