--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -38,6 +38,7 @@
 		"@unovis/svelte": "^1.0.3",
 		"@unovis/ts": "^1.0.3",
 		"d3-fetch": "^3.0.1",
-		"d3-scale-chromatic": "^3.0.0"
+		"d3-scale-chromatic": "^3.0.0",
+		"daisyui": "^2.51.5"
 	}
 }
