--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -16,6 +16,7 @@
 		"@sveltejs/kit": "^1.5.0",
 		"@types/d3-fetch": "^3.0.2",
 		"@types/node": "^18.15.11",
+		"@types/wordcloud": "^1.2.0",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
 		"autoprefixer": "^10.4.7",
@@ -40,6 +41,7 @@
 		"@unovis/ts": "^1.0.3",
 		"d3-dsv": "^3.0.1",
 		"d3-scale-chromatic": "^3.0.0",
-		"daisyui": "^2.51.5"
+		"daisyui": "^2.51.5",
+		"wordcloud": "^1.2.2"
 	}
 }
