--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -13,6 +13,7 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
+		"@sveltejs/adapter-static": "^2.0.2",
 		"@sveltejs/kit": "^1.5.0",
 		"@types/d3-fetch": "^3.0.2",
 		"@types/node": "^18.15.11",
