--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -17,6 +17,7 @@
 		"@sveltejs/adapter-static": "^2.0.2",
 		"@sveltejs/kit": "^1.5.0",
 		"@types/d3-fetch": "^3.0.2",
+		"@types/mark.js": "^8.11.8",
 		"@types/node": "^18.15.11",
 		"@types/wordcloud": "^1.2.0",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
@@ -45,6 +46,7 @@
 		"d3-dsv": "^3.0.1",
 		"d3-scale-chromatic": "^3.0.0",
 		"daisyui": "^2.51.5",
+		"mark.js": "^8.11.1",
 		"wordcloud": "^1.2.2"
 	}
 }
