--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -10,7 +10,7 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
 		"format": "prettier --plugin-search-dir . --write .",
-		"deploy": "BASE_PATH=/open-society-technologies-thesis yarn build && gh-pages -d build"
+		"deploy": "BASE_PATH=/open-society-technologies-thesis yarn build && gh-pages -d build --dotfiles"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
